# noslop

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cspell.json  eslint.config.mjs  knip.json  llms-full.txt  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  stryker.conf.json  tsconfig.json  vitest.acceptance.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: pre-tool-use.sh
.cspell/: project-words.txt
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: publish.yml  quality.yml
.husky/: pre-push
docs/: glossary.md  quality-matrix.md
docs/guides/: coding-agents.md  greenfield.md  monorepos.md
docs/languages/: cpp.md  dart.md  dotnet.md  elixir.md  go.md  haskell.md  java.md  javascript.md  kotlin.md  lua.md  ocaml.md  php.md  python.md  ruby.md  rust.md  scala.md  swift.md  typescript.md  zig.md
examples/long-horizon/: README.md
examples/monorepo/: .clang-tidy  .hlint.yaml  .luacheckrc  .scalafix.conf  .swiftlint.yml  .typos.toml  AGENTS.md  Directory.Build.props  README.md  analysis_options.yaml  cspell.json  eslint.config.js  pyproject.toml
experiment/: EXPERIMENT.md  compare.sh  run.sh  setup.sh  task-prompt.md
fixtures/cpp/: CMakeLists.txt
fixtures/cpp/src/: calculator.cpp  calculator.h  operations.cpp  operations.h
fixtures/cpp/tests/: calculator_test.cpp
fixtures/go/: errors.go  (+3 more)
fixtures/haskell/: calculator.cabal
fixtures/haskell/src/: Calculator.hs  Errors.hs  Operations.hs
fixtures/haskell/test/: Main.hs
scripts/: build-llms-full.mjs  prepare.mjs  spell
(+565 files in other folders)
