cabal-version: 2.4
name: calculator
version: 0.1.0.0
build-type: Simple

library
  exposed-modules: Calculator, Operations, Errors
  build-depends: base >=4.14 && <5
  hs-source-dirs: src
  default-language: Haskell2010

test-suite calculator-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends: base >=4.14 && <5, calculator
  hs-source-dirs: test
  default-language: Haskell2010
